# ChangeLog for dev-libs/libnfc
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-libs/libnfc/ChangeLog,v 1.12 2013/09/24 13:37:47 mrueg Exp $

*libnfc-1.7.0 (24 Sep 2013)

  24 Sep 2013; Manuel Rüger <mrueg@gentoo.org> +libnfc-1.7.0.ebuild:
  NMU: Version bump. Fixes #461914.

*libnfc-1.5.1-r1 (24 May 2013)

  24 May 2013; Mike Frysinger <vapier@gentoo.org> +libnfc-1.5.1-r1.ebuild,
  metadata.xml:
  Add USE flags to control all the optional deps.

  26 Mar 2013; Mike Auty <ikelos@gentoo.org> libnfc-1.5.1.ebuild,
  +files/libnfc-1.5.1-glibc-2.17.patch:
  Apply patch for glibc-2.17, fixes bug 452212.

*libnfc-1.5.1 (17 Oct 2011)

  17 Oct 2011; Mike Auty <ikelos@gentoo.org> -libnfc-1.3.1.ebuild,
  -libnfc-1.3.2.ebuild, -libnfc-1.3.3.ebuild, +libnfc-1.5.1.ebuild:
  Remove some old versions and bump the latest.

*libnfc-1.5.0 (29 Apr 2011)

  29 Apr 2011; Mike Auty <ikelos@gentoo.org> +libnfc-1.5.0.ebuild:
  Version bump libnfc to 1.5.0.

  20 Mar 2011; Samuli Suominen <ssuominen@gentoo.org> libnfc-1.3.1.ebuild,
  libnfc-1.3.2.ebuild, libnfc-1.3.3.ebuild, libnfc-1.3.4.ebuild,
  libnfc-1.4.2.ebuild:
  Fix libusb depend to correct SLOT.

*libnfc-1.4.2 (23 Feb 2011)

  23 Feb 2011; Mike Auty <ikelos@gentoo.org> +libnfc-1.4.2.ebuild:
  Version bump to 1.4.2 which has a different API and now uses proper sonaming.

*libnfc-1.3.4 (06 Apr 2010)

  06 Apr 2010; Mike Auty <ikelos@gentoo.org> +libnfc-1.3.4.ebuild:
  Version bump.

*libnfc-1.3.3 (17 Feb 2010)

  17 Feb 2010; Mike Auty <ikelos@gentoo.org> +libnfc-1.3.3.ebuild:
  Version bump libnfc to 1.3.3.

*libnfc-1.3.2 (01 Feb 2010)

  01 Feb 2010; Mike Auty <ikelos@gentoo.org> +libnfc-1.3.2.ebuild:
  Version bump libnfc to 1.3.2.

*libnfc-1.3.1 (23 Jan 2010)

  23 Jan 2010; Mike Auty <ikelos@gentoo.org> +libnfc-1.3.1.ebuild:
  Version bump libnfc.

*libnfc-1.2.1 (16 Aug 2009)

  16 Aug 2009; Mike Auty <ikelos@gentoo.org> +libnfc-1.2.1.ebuild,
  +metadata.xml: