@@ -11,6 +11,6 @@ EBUILD libnfc-1.4.2.ebuild 743 SHA256 339d172c54cf62197f8d8c63c414f60c085ef6192c
 EBUILD libnfc-1.5.0.ebuild 740 SHA256 9a6216e0320313fa7dfbf2e62e870d5c1ed26ca0f99e1f5c277799b11df2e1ce SHA512 92008173be7cdef9a9fc46e2ec0616feea72cfcd20aee95c09e701669f04a37beced6fadb80765181603ac4e117ec33a147de43b0d7196fc4257f24b4e556b4a WHIRLPOOL d6378e238c3d41fda33c13f328cbf030336b218ce9057db5dd49cb11bd3fde032d5932029b0da18f2534226b610ec08c1b7e4dcf5550cb5237889b8657b94e8c
 EBUILD libnfc-1.5.1-r1.ebuild 1324 SHA256 089019d627d0d1a0b4fdd7164aac1e0f096ef402175c8823f0e1845a2145adb5 SHA512 41f7348fb713ed6fe847f66fb2a6d56beff6dedf08cc4ed4558704c8ebc678bc8edbdd53846d870de4025a9f43d44af3d3d78a4be1607604cbe62474903e2135 WHIRLPOOL d9fd9d75a4afc3a0e23ccfc2bd51f4ebb53d82696748f1a19be9aba9be06d10a40bc0bbf228391fe5681efef8b65195c9eccd7dcfcd05a9e6a3b1974f39dd579
 EBUILD libnfc-1.5.1.ebuild 810 SHA256 a5c4390d56e3adbb00d329646fc4a1c91726de31a917fb02359cc373493059cf SHA512 2dbeb07aa3c72cd8b5f01d97083854362e3bb92ffe1c5299c3dfae72db0109d20c782addf740936c5f00c58ce9931d13e6a9d6f335e8500aea447fd20e577146 WHIRLPOOL e2e5fd8eda8e282b228527a7e99268746944c5b95b307ea151b760b4a99fdc8d757aeb2034f894e57e5a1dba6b8aab2eb4df043071503f3467e2ba06e90dfc98
-EBUILD libnfc-1.7.0.ebuild 1251 SHA256 7fd6c9111086088434bd5ac20a28cf52cec4ddb46bad8245e640605d2f0df4b6 SHA512 fe27eb5b336f30a57b98806a95039a3c74e79f58ed455bdc4f9f60c3d7cc4a167271a477994d3d87b3e7031cbf30c379f8fa25fa6b2157f20121297680b731ae WHIRLPOOL 66d2d7a57d00a59e2d1261dca54f42c7927f5e7f276c0a22d2a0904e08c8f2e4107eee5f68173c54eb28c066444bf0e30deff8954915a8db5af9e9e8dd3c7b92
-MISC ChangeLog 2056 SHA256 7aa36e4f19d051eb7b96364478419da34008dc0430ba01118b50b8fcaf0d571e SHA512 072d65bf3ef2353712cf7dfb473f2039b99b3b6eec768b36827180b59be5aa3dddc0399b59eacffa4d9ee969f4d389643d1ccaf31e621f3318a4ae8b3a9989c3 WHIRLPOOL 24005a03115835fbbb5f73c001beabbcddcc5b763ba1b606c0c5abb18976679ecc50778aaa33a69450c1b76a7a1ea562c1e5b02e6a581350d1ad1bda49c81c02
+EBUILD libnfc-1.7.0-r1.ebuild 1114 SHA256 350f5e06fa9d05dadf8b596f44d0f3a1f5370d30a1505f1d7143d49a2994ab12 SHA512 545184416422d2321aa1942ab1ff8b81fc8552c30bb74cfb27b5b223e501cccecbc5cad11a41968f82993765d60135e4db25a0d25d89d0525c6cfafcf5c49f43 WHIRLPOOL 5c4c1a954536327a903998759aea7ce5538c71153c72bf53bb3d7bca8d859b21a95f12c4b56dc8ad7e00db318c474b788e474bfffa215ddb9a5d5e773d1316f6
+MISC ChangeLog 2250 SHA256 26b3c4cb6a50bb423d9e8bc8345e01b0662f9603ff4dfe6df83d30e7b710a146 SHA512 a100e1d08b19ca82097fd949e183472495c2c62c80083deec0671f76b0398eb787d420fae3191f6af6e71ca95443c3d69f2004d05812d5f25681bf1bc753dea5 WHIRLPOOL 47d41a4528b6a9a3cedc19eb198ecc5ac7f7f6e186571ff39a51611b7b9761f9c50c8cf81f83a9659941ebc5c76abfe541d8e028b9f000bd5a3bc2fa7eea16c7
 MISC metadata.xml 393 SHA256 ee15050237d1d775627b4cbefcb4a956481086117e490db2598410c209d294a7 SHA512 cd69b50424a44ee5b0eb23b95f4e4576fd6363b3c3b15c92ccceb6d00bff41f1b6b4cf66416af2127435abe6fff6aad14b3ab1bae8e54161169a0608dafb5e3d WHIRLPOOL 066cd1634ac130ac9ee0cb0d68552e2898b78e2c9f86347f56c7153db732b2f4d3b4912ddd39c435753972ebe194acb9a65e6b366e59350c0eacd4bde5884caf
