@@ -1,7 +1,7 @@
 DEFINED_PHASES=compile configure install
 DEPEND=pcsc-lite? ( sys-apps/pcsc-lite ) readline? ( sys-libs/readline ) usb? ( virtual/libusb:0 ) doc? ( app-doc/doxygen )
 DESCRIPTION=Near Field Communications (NFC) library
-EAPI=4
+EAPI=5
 HOMEPAGE=http://www.libnfc.org/
 IUSE=doc pcsc-lite readline static-libs usb
 KEYWORDS=~amd64 ~arm ~x86
@@ -9,5 +9,5 @@ LICENSE=LGPL-3
 RDEPEND=pcsc-lite? ( sys-apps/pcsc-lite ) readline? ( sys-libs/readline ) usb? ( virtual/libusb:0 )
 SLOT=0
 SRC_URI=http://libnfc.googlecode.com/files/libnfc-1.7.0.tar.bz2
-_eclasses_=eutils	4878e7f88afc0ba0866ac112190b0fd4	multilib	892e597faee02a5b94eb02ab512e7622	toolchain-funcs	7ffd28a8c7eea27218865352bfd3ab2f	user	d0a4d0735a6c0183d707ca919bd72f28
-_md5_=4d817bdbb7c5f9d115acf7e21c5b69b7
+_eclasses_=multilib	892e597faee02a5b94eb02ab512e7622	toolchain-funcs	7ffd28a8c7eea27218865352bfd3ab2f
+_md5_=f7bce6b25642eea47c8529104ef3b24e
